[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywodlib"
dynamic = ["version"]
description = "Assorted utility functions"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "pywodlib@varonathe.org" }
]

keywords = [
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
all = [
    "anyio ~= 3.6",
    "linesep ~= 0.4",
    "click >= 8.0",
    "pytest >= 6.0",
]
anyio = ["anyio ~= 3.6", "linesep ~= 0.4"]
click = ["click >= 8.0"]
pytest = ["pytest >= 6.0"]

[project.urls]
"Source Code" = "https://github.com/jwodder/pywodlib"
"Bug Tracker" = "https://github.com/jwodder/pywodlib/issues"

[tool.hatch.version]
path = "src/pywodlib/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
