[metadata]
name = pywodlib
version = attr:pywodlib.__version__
description = Assorted utility functions
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pywodlib@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pywodlib

keywords =
    ###

classifiers =
    Private :: Keep Off PyPI
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pywodlib
    Bug Tracker = https://github.com/jwodder/pywodlib/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.7

[options.extras_require]
all =
    %(anyio)s
    %(click)s
    %(pytest)s
anyio =
    anyio ~= 3.6
    linesep ~= 0.4
click =
    click >= 8.0
pytest =
    pytest >= 6.0

[options.packages.find]
where = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
